# windows-magnifier

./: .gitignore  CMakeLists.txt  CONFIGURATION.md  Cargo.toml  README.md  build.bat
config/: version.h.in
doc/: default-config.yaml
manifest/: magnifier.manifest
src/: MagInfo.cpp  Magnifier.cpp  Magnifier.h  config.rs  maginfo.cpp  maginfo.h  magnifier.rs  main.cpp  main.rs
