[package]
name = "magnifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ref_thread_local = "0.1"
utf16_lit = "2.0"

[dependencies.windows]
version = "0.44.0"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Magnification",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_Console",
]
